<resources>
    <string name="app_name">Gaian</string>
    <string name="gaian">Gaian</string>
    <string name="start_game">Start Game</string>
    <string name="remove_all">Remove All</string>
    <string name="settings">Settings</string>
    <string name="save_and_return">Save and Return</string>
    <string name="sfx">SFX</string>
    <string name="preference_file_key">joshuaknewstub.gaian.preference_file_key</string>
</resources>